fix menu z-index

--- a/css/menubar_kit_profile.css
+++ b/css/menubar_kit_profile.css
@@ -5,7 +5,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 99999;
+    z-index: 1;
 
 }
 
